# memu-mcp

./: .env.example  .env.render  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-render.txt  requirements.txt
config/: example.json
docs/: API.md  ENVIRONMENT_VARIABLES.md  RENDER_DEPLOYMENT.md  SETUP.md
examples/: basic_usage.py  mcp_client_example.py
scripts/: start_worker.sh
src/memu_mcp_server/: __init__.py  api.py  config.py  logger.py  main.py  memu_client.py  server.py  tools.py
tests/: __init__.py  test_config.py  test_tools.py
